// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> behaviour tests is false after two clicks 1`] = `
<input
  checked={true}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  disabled={false}
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;

exports[`<Checkbox /> behaviour tests match snapshot 1`] = `
<input
  checked={false}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  disabled={false}
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;

exports[`<Checkbox /> disabled behaviour tests match snapshot 1`] = `
<input
  checked={false}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  disabled={true}
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;
